--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
 
 
 
-        Part 1 - Large to Large  Can student exceed the teacher
+        Part 1 - Large Model to Large Mode : Can student model exceed the teachers performance
 
       </p>
     </div>
