--- a/about/index.html
+++ b/about/index.html
@@ -1018,7 +1018,12 @@
 <img data-proofer-ignore data-src="/assets/img/about/7.jpg" alt="Desktop View" width="340" class="left" />
 <img data-proofer-ignore data-src="/assets/img/about/8.jpg" alt="Desktop View" width="340" class="left" />
 <img data-proofer-ignore data-src="/assets/img/about/9.jpg" alt="Desktop View" width="340" class="left" />
-<img data-proofer-ignore data-src="/assets/img/about/10.jpg" alt="Desktop View" width="340" class="left" /></p>
+<img data-proofer-ignore data-src="/assets/img/about/10.jpg" alt="Desktop View" width="340" class="left" />
+<img data-proofer-ignore data-src="/assets/img/about/11.jpg" alt="Desktop View" width="340" class="left" />
+<img data-proofer-ignore data-src="/assets/img/about/12.jpg" alt="Desktop View" width="340" class="left" />
+<img data-proofer-ignore data-src="/assets/img/about/13.jpg" alt="Desktop View" width="340" class="left" />
+<img data-proofer-ignore data-src="/assets/img/about/14.jpg" alt="Desktop View" width="340" class="left" />
+</p>
 
       </div>
     
